--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Morten Rand-Hendriksen",
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
+    "@babel/eslint-parser": "^7.24.7",
     "eslint": "^7.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
